Switch from Scada to Oswald

--- a/main.css
+++ b/main.css
@@ -93,7 +93,7 @@ table td, table th {
 }
 
 h1 {
-    font-family: 'Scada', sans-serif;
+    font-family: 'Oswald', sans-serif;
     font-weight: 400;
     font-size: 48px;
 }
