--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,10 +5,9 @@
         <title>{{ page.title }}</title>
         <link rel="stylesheet" href="normalize.css">
         <link rel="stylesheet" href="main.css">
-        <link 
-        	href='http://fonts.googleapis.com/css?family=Scada:400,700' 
-        	rel='stylesheet' 
-        	type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Oswald' 
+            rel='stylesheet' 
+            type='text/css'>
     </head>
     <body class="page">
     	{{ content }}
