Break out indexes for individual years, add header, new CSS

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,6 +10,7 @@
             type='text/css'>
     </head>
     <body class="page">
+        {% include nav.html %}
     	{{ content }}
     </body>
 </html>
