--- a/_layouts/tindallgram.html
+++ b/_layouts/tindallgram.html
@@ -4,10 +4,14 @@
         <meta charset="utf-8">
         <title>{{ page.title }}</title>
         <link rel="stylesheet" href="normalize.css">
+        <link href='http://fonts.googleapis.com/css?family=Oswald' 
+            rel='stylesheet' 
+            type='text/css'>
         <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="tindallgrams.css">
     </head>
     <body class="tindallgram">
+        {% include nav.html %}
     	{{ content }}
     </body>
 </html>
