--- a/main.css
+++ b/main.css
@@ -66,8 +66,58 @@ body {
     margin: 2em auto;
 }
 
+.page {
+    margin-top: 4em;
+}
+
 .page p {
     line-height: 2;
+}
+
+.nav {
+    font-family: 'Oswald', sans-serif; 
+    width: 100%;
+    background-color: white;
+    border-bottom: 1px solid black;  
+    position: fixed;
+    top: 0;
+    left: 0; 
+    z-index: 100;
+}
+
+.nav ul {
+    width: 45em;
+    list-style-type: none;
+    padding: 0;
+    margin: 0 auto;
+    height: 3.25em;
+    line-height: 3.25em;
+}
+
+.nav ul::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.nav ul li {
+    display: block;
+    float: left;
+    font-size: 125%;
+    margin-right: 1em;
+}
+
+.nav a {
+    color: #ccc;
+    text-decoration: none;
+}
+
+.nav a:active, .nav a:visited {
+    color: #ccc;
+}
+
+.nav a:hover {
+    color: black;
 }
 
 table {
@@ -90,6 +140,11 @@ table {
 table td, table th {
     padding: .5em 1em;
     border: 1px solid black;
+}
+
+table.sources {
+    font-size: 80%;
+    margin-bottom: 2em;
 }
 
 h1 {
