--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,10 +1,10 @@
 <div class="nav">
     <ul>
-        <li><a href="/">Tindallgrams</a></li>
-        <li><a href="/1966.html">1966</a></li>
-        <li><a href="/1967.html">1967</a></li>
-        <li><a href="/1968.html">1968</a></li>
-        <li><a href="/1969.html">1969</a></li>
-        <li><a href="/1970.html">1970</a></li>
+        <li><a href="./">Tindallgrams</a></li>
+        <li><a href="./1966.html">1966</a></li>
+        <li><a href="./1967.html">1967</a></li>
+        <li><a href="./1968.html">1968</a></li>
+        <li><a href="./1969.html">1969</a></li>
+        <li><a href="./1970.html">1970</a></li>
     </ul>
 </div>
