--- a/_includes/index-1966.html
+++ b/_includes/index-1966.html
@@ -50,7 +50,7 @@ AS-504</a></td>
     <tr>
         <td>66-FM1-84</td>
         <td>Jul 11 1966</td>
-        <td>Capability to do orbit navigation in earth orbit will not be implemented for AS-207 or AS-§04</td>
+        <td>Capability to do orbit navigation in earth orbit will not be implemented for AS-207 or AS-504</td>
         <td>2</td>
     </tr>
     <tr>
