--- a/_includes/index-1966.html
+++ b/_includes/index-1966.html
@@ -110,7 +110,7 @@ AS-504</a></td>
     <tr>
         <td>66-FM1-108</td>
         <td>Sep 20 1966</td>
-        <td>Spacecraft  computer  program  status  for  AS-5O1</td>
+        <td>Spacecraft  computer  program  status  for  AS-501</td>
         <td>7</td>
     </tr>
     <tr>
