Add front-matter and links for additions

--- a/_includes/index-1966.html
+++ b/_includes/index-1966.html
@@ -44,25 +44,25 @@ AS-504</a></td>
     <tr>
         <td>66-FM1-83</td>
         <td>Jun 11 1966</td>
-        <td>Apollo rendezvous guidance computer program options</td>
+        <td><a href="66-FM1-83.html">Apollo rendezvous guidance computer program options</a></td>
         <td>2</td>
     </tr>
     <tr>
         <td>66-FM1-84</td>
         <td>Jul 11 1966</td>
-        <td>Capability to do orbit navigation in earth orbit will not be implemented for AS-207 or AS-504</td>
+        <td><a href="66-FM1-84.html">Capability to do orbit navigation in earth orbit will not be implemented for AS-207 or AS-504</a></td>
         <td>2</td>
     </tr>
     <tr>
         <td>66-FM1-85</td>
         <td>Jul 8 1966</td>
-        <td>Determination of relative CSM orbit</td>
+        <td><a href="66-FM1-85.html">Determination of relative CSM orbit</a></td>
         <td>2</td>
     </tr>
     <tr>
         <td>66-FM1-86</td>
         <td>Jul 8 1966</td>
-        <td>No special program available for targeting the CSM plane change in lunar orbit</td>
+        <td><a href="66-FM1-86.html">No special program available for targeting the CSM plane change in lunar orbit</a></td>
         <td>2</td>
     </tr>
     <tr>
