--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,9 @@
         <meta name="viewport" content="width=device-width">
 
         <link rel="stylesheet" href="/css/normalize.min.css">
+        <link href='http://fonts.googleapis.com/css?family=Oswald' 
+            rel='stylesheet' 
+            type='text/css'>
         <link rel="stylesheet" href="/css/main.css">
 
         <script src="/js/modernizr-2.6.2.min.js"></script>
