--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,11 @@ h1 {
     text-decoration: underline;
 }
 
+.tindallgram em {
+    font-style: normal;
+    text-decoration: underline;
+}
+
 
 
 
