Add include for nav header

--- a/_layouts/inner.html
+++ b/_layouts/inner.html
@@ -1,9 +1,6 @@
 ---
 layout: default
 ---
-
-<ul role=main-navigation>
-  <li><a href="/">Tindallgrams Home</a></li>
-</ul>
+{% include header.html %}
 
 {{ content }}
