--- a/_assets/main.scss
+++ b/_assets/main.scss
@@ -65,8 +65,24 @@ body {
     margin: 2em auto;
 }
 
+h1, h2 {
+    font-family: 'Oswald', sans-serif;
+}
+
 h1 {
-    font-family: 'Oswald', sans-serif; 
+    font-size: 2.5em; 
+}
+
+#home {
+    h1 {
+        margin-bottom: 0.25em;
+    }
+
+    .subtitle {
+        font-family: 'Oswald', sans-serif;
+        font-size: 1.25em;
+        letter-spacing: 2px;
+    }
 }
 
 .bigquote {
@@ -75,16 +91,42 @@ h1 {
     font-size: 150%;
     font-style: italic;
     padding: 1em;
-    margin: 0 0 1em 1em;
+    margin: 1em 0 1em 1em;
     width: 50%;
     float: right;
+
+    .dated {
+        text-align: right;
+        font-size: 75%;
+    }
 }
 
-.bigquote .dated {
-    text-align: right;
-    font-size: 75%;
-}
+.header {
+    &.inner {
+        a {
+            color: black;
+            text-decoration: none;
 
+            &:hover {
+                color: gray;
+            }
+        }
+
+        ul {
+            font-family: 'Oswald', sans-serif; 
+            font-size: 1.1em;
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+
+            li {
+                display: inline;
+                margin-right: 1em;
+            }
+
+        }
+    }
+}
 
 @import "_assets/tindallgram";
 
