Add tag to generate list of tags for one page

--- a/_layouts/tindallgram.html
+++ b/_layouts/tindallgram.html
@@ -2,6 +2,10 @@
 layout: inner
 ---
 
+<div class="taglist">
+	{% pagetags %}
+</div>
+
 <article class="tindallgram">
   <ul class="headings">
     <li><span class="label">Date:</span> {{ page.date}}</li>
