--- a/_assets/_tindallgram.scss
+++ b/_assets/_tindallgram.scss
@@ -15,3 +15,33 @@
     text-decoration: underline;
   }
 }
+
+.taglist {
+  font-family: 'Oswald', sans-serif; 
+  a {
+    color: white;
+    text-decoration: none;
+  }
+
+  ul {
+    list-style-type: none;
+    display: inline;
+    margin: 0;
+    padding: 0;
+
+    li {
+      display: inline;
+      margin-right: 1em;
+      border: 1px solid black;
+      padding: 0 0.5em;
+      border-radius: 3px;
+      background-color: gray;
+      font-size: .9em;
+
+      &:hover {
+        background-color: silver;
+      }
+
+    }
+  }
+}
