Add link to tags

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,5 +3,6 @@
   <ul role=main-navigation>
     <li><a href="/">Home</a></li>
     <li><a href="/">Terms &amp; Abbreviations</a></li>
+    <li><a href="/tags">Tags</a></li>
   </ul>
 </div>
