Move tagged text into plugin so that it will only be output if there are tags

--- a/_layouts/tindallgram.html
+++ b/_layouts/tindallgram.html
@@ -3,7 +3,7 @@ layout: inner
 ---
 <article class="tindallgram">
     <div class="taglist">
-        Tagged: {% pagetags %}
+        {% pagetags %}
     </div>
   <ul class="headings">
     <li><span class="label">Date:</span> {{ page.date}}</li>
