--- a/_assets/main.scss
+++ b/_assets/main.scss
@@ -85,17 +85,18 @@ h1 {
         font-size: 1.25em;
         letter-spacing: 2px;
     }
+}
 
-    .ddg-search {
-        position: absolute;
-        top: 15px;
-        right: 0;
+.ddg-search {
+    position: absolute;
+    top: 15px;
+    right: 0;
 
-        iframe {
-            border: none;
-        }
+    iframe {
+        border: none;
     }
 }
+
 
 .bigquote {
     background: #f1f1f1;
@@ -115,6 +116,8 @@ h1 {
 
 .header {
     &.inner {
+        position: relative;
+        
         a {
             color: black;
             text-decoration: none;
