--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,4 +5,9 @@
     <li><a href="/">Terms &amp; Abbreviations</a></li>
     <li><a href="/tags">Tags</a></li>
   </ul>
+
+  <div class="ddg-search">
+    {% ddg_search site:tindallgrams.net prefill:Search+Tindallgrams %}
+  </div>
+
 </div>
