Move DDG search to an include

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,6 @@
     <li><a href="/tags">Tags</a></li>
   </ul>
 
-  <div class="ddg-search">
-    {% ddg_search site:tindallgrams.net prefill:Search+Tindallgrams %}
-  </div>
+  {% include ddg.html %}
 
 </div>
