--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,6 +2,7 @@
   <h1><a href="/">Tindallgrams</a></h1>
   <ul role=main-navigation>
     <li><a href="/">Home</a></li>
+    <li><a href="/year">By Year</a></li>
     <li><a href="/">Terms &amp; Abbreviations</a></li>
     <li><a href="/tags">Tags</a></li>
   </ul>
