--- a/_includes/sources.html
+++ b/_includes/sources.html
@@ -2,43 +2,43 @@
 <table class="sources">
     <tbody>
     <tr>
-        <td>1</td>
+        <td class="source">1</td>
         <td>
             <a href="http://www.collectspace.com/resources/tindallgrams/tindallgrams01.pdf">http://www.collectspace.com/resources/tindallgrams/tindallgrams01.pdf</a>
         </td>
     </tr>
     <tr>
-        <td>2</td>
+        <td class="source">2</td>
         <td>
             <a href="http://www.collectspace.com/resources/tindallgrams/tindallgrams02.pdf">http://www.collectspace.com/resources/tindallgrams/tindallgrams02.pdf</a>
         </td>
     </tr>
     <tr>
-        <td>3</td>
+        <td class="source">3</td>
         <td>
             <a href="http://www.collectspace.com/resources/tindallgrams/1967_tindallgrams.pdf">http://www.collectspace.com/resources/tindallgrams/1967_tindallgrams.pdf</a>
         </td>
     </tr>
     <tr>
-        <td>4</td>
+        <td class="source">4</td>
         <td>
             <a href="http://www.collectspace.com/resources/tindallgrams/1968_tindallgrams.pdf">http://www.collectspace.com/resources/tindallgrams/1968_tindallgrams.pdf</a>
         </td>
     </tr>
     <tr>
-        <td>5</td>
+        <td class="source">5</td>
         <td>
             <a href="http://www.collectspace.com/resources/tindallgrams/1969_tindallgrams.pdf">http://www.collectspace.com/resources/tindallgrams/1969_tindallgrams.pdf</a>
         </td>
     </tr>
     <tr>
-        <td>6</td>
+        <td class="source">6</td>
         <td>
             <a href="http://www.collectspace.com/resources/tindallgrams/1970_tindallgrams.pdf">http://www.collectspace.com/resources/tindallgrams/1970_tindallgrams.pdf</a>
         </td>
     </tr>
     <tr>
-        <td>7</td>
+        <td class="source">7</td>
         <td>
             <a href="http://web.mit.edu/digitalapollo/Documents/Chapter7/tindallgrams.pdf">http://web.mit.edu/digitalapollo/Documents/Chapter7/tindallgrams.pdf</a>
         </td>
