Add index by source

--- a/_assets/main.scss
+++ b/_assets/main.scss
@@ -143,6 +143,10 @@ h1 {
     }
 }
 
+.index-list {
+    font-family: 'Oswald', sans-serif;
+}
+
 table.sources {
     font-size: 90%;
     margin-bottom: 2em;
