Add count of done Tindallgrams and Hoe to contribute page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,7 @@
     <li><a href="/year">By Source</a></li>
     <li><a href="/">Terms &amp; Abbreviations</a></li>
     <li><a href="/tags">Tags</a></li>
+    <li><a href="/contribute">How to Contribute</a></li>
   </ul>
 
   {% include ddg.html %}
