--- a/_layouts/tindallgram.html
+++ b/_layouts/tindallgram.html
@@ -14,3 +14,8 @@ layout: inner
 
   {{ content }}
 </article>
+
+<div class="glossary">
+  <h2>Terms &amp; Abbreviations</h2>
+  {% glossary %}
+</div>
