Add CSS for alphabetical term index

--- a/_assets/main.scss
+++ b/_assets/main.scss
@@ -60,6 +60,10 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+.oswald {
+    font-family: 'Oswald', sans-serif;
+}
+
 body {
     width: 960px;
     margin: 2em auto;
