--- a/_assets/_glossary.scss
+++ b/_assets/_glossary.scss
@@ -1,13 +1,11 @@
 .glossary {
   font-family: sans-serif;
-  border-top: 1px solid black;
 
   h2 {
   	font-size: 1.25em;
   }
 
   dl {
-  	font-size: 0.9em;
     dt {
         font-family: 'Oswald', sans-serif;
         margin: 0;
@@ -19,6 +17,35 @@
     	p {
     		margin-top: 0.25em;
     	}
+    }
+  }
+
+  &.in-page {
+    border-top: 1px solid black;
+
+    dl {
+      font-size: 0.9em;
+    }
+  }
+}
+
+.terms-alpha {
+  @extend .oswald;
+  list-style-type: none;
+  padding: 0;
+
+  li {
+    display: inline-block;
+    margin-right: 0.5em;
+    text-transform: uppercase;
+
+    a {
+      color: black;
+      text-decoration: none;
+
+      &:hover {
+        color: gray;
+      }
     }
   }
 }
