Add extra class for in-page glossary

--- a/_layouts/tindallgram.html
+++ b/_layouts/tindallgram.html
@@ -15,7 +15,7 @@ layout: inner
   {{ content }}
 </article>
 
-<div class="glossary">
+<div class="glossary in-page">
   <h2>Terms &amp; Abbreviations</h2>
   {% glossary %}
 </div>
