Alter formatting of in-page glossaries

--- a/_assets/_glossary.scss
+++ b/_assets/_glossary.scss
@@ -21,7 +21,8 @@
   }
 
   &.in-page {
-    border-top: 1px solid black;
+    background: #f1f1f1;
+    padding: 0.5em 2.5em 1em;
 
     dl {
       font-size: 0.9em;
