--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,7 @@
     <li><a href="/">Home</a></li>
     <li><a href="/year">By Year</a></li>
     <li><a href="/sources">By Source</a></li>
-    <li><a href="/">Terms &amp; Abbreviations</a></li>
-    <li><a href="/tags">Tags</a></li>
+    <li><a href="/terms/a">Terms &amp; Abbreviations</a></li>
     <li><a href="/contribute">How to Contribute</a></li>
   </ul>
 
