Add link to full glossary

--- a/_layouts/tindallgram.html
+++ b/_layouts/tindallgram.html
@@ -17,5 +17,6 @@ layout: inner
 
 <div class="glossary in-page">
   <h2>Terms &amp; Abbreviations</h2>
+  <p class="glossary-link">View <a href="/terms/a">Full Glossary</a></p>
   {% glossary %}
 </div>
