--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,9 @@
 
         {{ content }}
 
+        {% include footer.html %}
+
+
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
 
