--- a/_assets/_tindallgram.scss
+++ b/_assets/_tindallgram.scss
@@ -14,6 +14,35 @@
     font-style: normal;
     text-decoration: underline;
   }
+
+  .headings {
+    position: relative;
+    list-style-type: none;
+    padding: 0;
+
+    .from {
+      width: 50%;
+      position : absolute;
+      top: 0;
+      left: 0;
+
+    }
+
+    .date {
+      position: absolute;
+      right: 0
+    }
+
+    .serial {
+      position: absolute;
+      right: 0;
+      top: 1.5em;
+    }
+
+    .subject {
+      padding-top: 3.5em;
+    }
+  }
 }
 
 .taglist {
