--- a/_layouts/tindallgram.html
+++ b/_layouts/tindallgram.html
@@ -2,14 +2,11 @@
 layout: inner
 ---
 <article class="tindallgram">
-    <div class="taglist">
-        {% pagetags %}
-    </div>
   <ul class="headings">
-    <li><span class="label">Date:</span> {{ page.date}}</li>
-    <li><span class="label"> </span> {{ page.serial}}</li>
-    <li><span class="label">From:</span> {{ page.from}}</li>
-    <li><span class="label">Subject:</span> {{ page.subject}}</li>
+    <li class="date"><span class="label">Date:</span> {{ page.date}}</li>
+    <li class="serial"><span class="label"> </span> {{ page.serial}}</li>
+    <li class="from"><span class="label">From:</span> {{ page.from}}</li>
+    <li class="subject"><span class="label">Subject:</span> {{ page.subject}}</li>
   </ul>
 
   {{ content }}
