User Google search until DDG indexes the site

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,21 @@
     <li><a href="/contribute">How to Contribute</a></li>
   </ul>
 
-  {% include ddg.html %}
+  <!-- { include ddg.html } -->
+  <div class="google-cse ddg-search">
+    <script>
+  (function() {
+    var cx = '004249481137223778463:hqxmzlhc05k';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+        '//www.google.com/cse/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+    <gcse:search></gcse:search>
+  </div>
 
 </div>
