Add border to Google search results

--- a/_assets/main.scss
+++ b/_assets/main.scss
@@ -103,6 +103,11 @@ h1 {
 
 .google-cse {
     width: 35%;
+    z-index: 500;
+
+    .gsc-results-wrapper-nooverlay.gsc-results-wrapper-visible {
+        border: 1px solid black;
+    }
 }
 
 .bigquote {
