--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <ul role=main-navigation>
     <li><a href="/">Home</a></li>
     <li><a href="/year">By Year</a></li>
-    <li><a href="/sources">By Source</a></li>
+    <li><a href="/source">By Source</a></li>
     <li><a href="/terms/a">Terms &amp; Abbreviations</a></li>
     <li><a href="/contribute">How to Contribute</a></li>
   </ul>
