--- a/_layouts/tindallgram.html
+++ b/_layouts/tindallgram.html
@@ -2,6 +2,7 @@
 layout: inner
 ---
 <article class="tindallgram">
+  {% pagetags %}
   <ul class="headings">
     <li class="date"><span class="label">Date:</span> {{ page.date}}</li>
     <li class="serial"><span class="label"> </span> {{ page.serial}}</li>
