--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,7 @@
     <li><a href="/">Home</a></li>
     <li><a href="/year">By Year</a></li>
     <li><a href="/source">By Source</a></li>
+    <li><a href="/topics">By Topic</a></li>
     <li><a href="/terms/a">Terms &amp; Abbreviations</a></li>
     <li><a href="/contribute">How to Contribute</a></li>
   </ul>
