Changes to sass pipeline

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -217,9 +217,9 @@ table.sources {
 
 }
 
-@import "_assets/tindallgram";
-@import "_assets/glossary";
-@import "_assets/footer";
+@import "tindallgram";
+@import "glossary";
+@import "footer";
 
 
 
