--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,10 +13,7 @@
         <link href='http://fonts.googleapis.com/css?family=Oswald' 
             rel='stylesheet' 
             type='text/css'>
-        {% css_asset_tag global %}
-            - /_assets/normalize.min.css
-            - /_assets/main.scss
-        {% endcss_asset_tag %}
+        <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}" />
         <script src="/js/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
