--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
-        <link href='http://fonts.googleapis.com/css?family=Oswald' 
+        <link href='https://fonts.googleapis.com/css?family=Oswald' 
             rel='stylesheet' 
             type='text/css'>
         <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}" />
