--- a/_includes/ddg.html
+++ b/_includes/ddg.html
@@ -1,3 +1,3 @@
   <div class="ddg-search">
-    <iframe src="https://duckduckgo.com/search.html?site=tindallgrams.net&prefill=Search Tindallgrams" title="Site search"></iframe>
+    <iframe src="https://duckduckgo.com/search.html?site=tindallgrams.net&prefill=Search%20Tindallgrams" title="Site search"></iframe>
   </div>
