Fix invalid role
A ul element can't have a role of "navigation" so wrap list in a nav
element (with a meaningful aria label)

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,15 @@
 <div class="inner header">
   <h1><a href="/">Tindallgrams</a></h1>
-  <ul role=main-navigation>
-    <li><a href="/">Home</a></li>
-    <li><a href="/year">By Year</a></li>
-    <li><a href="/source">By Source</a></li>
-    <li><a href="/topics">By Topic</a></li>
-    <li><a href="/terms/a">Terms &amp; Abbreviations</a></li>
-    <li><a href="/contribute">How to Contribute</a></li>
-  </ul>
+  <nav aria-label="primary">
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/year">By Year</a></li>
+      <li><a href="/source">By Source</a></li>
+      <li><a href="/topics">By Topic</a></li>
+      <li><a href="/terms/a">Terms &amp; Abbreviations</a></li>
+      <li><a href="/contribute">How to Contribute</a></li>
+    </ul>
+  </nav>
 
   <!-- { include ddg.html } -->
   <div class="google-cse ddg-search">
