--- a/_sass/_tindallgram.scss
+++ b/_sass/_tindallgram.scss
@@ -82,3 +82,30 @@
     }
   }
 }
+
+.ddg-search {
+  input {
+    font-size: 1em;
+    outline: 0;
+    border: 1px solid black;
+    padding: 0.5em;
+
+    &[type="text"] {
+      &::placeholder {
+        color: black;
+      }
+    }
+
+    &[type="submit"] {
+      color: black;
+      background-color: white;
+
+      &:hover,
+      &:active,
+      &:focus {
+        color: white;
+        background-color: black;
+      }
+    }
+  }
+}
